Add multilingual support for contact, CV, FAQ, and projects data
- Created Azerbaijani, English, and Georgian JSON files for contact information, CV details, FAQs, and project listings.
- Included email, LinkedIn, GitHub, and phone information in contact files.
- Added educational background and skills in CV files.
- Provided FAQs addressing common questions in all three languages.
- Listed projects with relevant links and descriptions in each language.
- Updated language files for Azerbaijani, English, and Georgian with appropriate translations for UI elements.

--- a/json/en/projects.json
+++ b/json/en/projects.json
@@ -1,16 +1,16 @@
 {
-    "Marneuli İctimai Kolleci": {
-        "label": "Marneuli İctimai Kolleci",
+    "Marneuli Public College": {
+        "label": "Marneuli Public College",
         "value": "https://msc.edu.ge/",
         "display": "msc.edu.ge"
     },
     "KuraX P2P Exchange": {
-        "label": "KuraX P2P Exchange (bitməyib)",
+        "label": "KuraX P2P Exchange (not finished)",
         "value": "https://kurax.io/",
         "display": "kuraX.io"
     },
-    "Yadgarovların xatirəsinə": {
-        "label": "Yadgarovların xatirəsinə (bitməyib)",
+    "In memory of the Yadigarovs": {
+        "label": "In memory of the Yadigarovs (not finished)",
         "value": "https://yadigarovlar.org/",
         "display": "yadigarovlar.org"
     }
